<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/maxresdefault"
    android:theme="@style/PlayTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <TextView
        android:id="@+id/timer"
        android:text="@string/timer"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:layout_below="@id/mode_name"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score"
        android:paddingEnd="10dp"
        android:textSize="15sp"
        android:layout_below="@id/mode_name"
        android:layout_alignParentEnd="true"
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/mode_name"
        android:text="@string/mode"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/quesion_layout"
        android:layout_marginTop="30dp"
        android:layout_below="@id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textSize="30sp"
            android:text="@string/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <GridLayout
            android:id="@+id/choice"
            android:layout_below="@id/question"
            android:rowCount="2"
            android:columnCount="2"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <Button
                    android:id="@+id/first_ans"
                    android:tag="0"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/first_answer"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/second_ans"
                    android:tag="1"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/second_answer"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/third_ans"
                    android:text="@string/third_answer"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:tag="2"
                    android:background="@android:color/transparent"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/fourth_ans"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:text="@string/fourth_answer"
                    android:tag="3"
                    android:background="@android:color/transparent"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        </GridLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/exit_button"
        android:layout_below="@id/quesion_layout"
        android:background="#004D40"
        android:text="@string/exit"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>