<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modes_fragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioGroupID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/normal_mode"
                android:text="@string/normal_mode"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/fast_mode"
                android:text="@string/fast_mode"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/quick_mode"
                android:text="@string/quick_mode"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

    </RelativeLayout>

</FrameLayout>